--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Hello World</h1>
+
+<p><a href="Resume/Resume.html">Resume of Mine </a></p>
+
+</body>
+</html>
