--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html>
-<body>
+<head>
+	<title>Christopher Ngo</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
+	<meta name="description" content="Am I cool yet?">
+</head>
+<section class="title">
+	<div class="intro">
+		<h1>Christopher Ngo</h1>
+		<h2>Engineer</h2>
+		<ul id="icons">
+			<li><a href="https://github.com/ingochris"><img src="icon/github.png" /></a></li>
+			<li><a href="https://www.linkedin.com/in/ingochris"><img src="icon/linkedin.png" /></a></li>
+			<li><a href="mailto:ingochris+inquiries@gmail.com"><img src="icon/email.png" /></a></li>
+			
 
-<h1>Hello World</h1>
+		</ul>
+	</div>
+</section>
 
-<p><a href="Resume/Resume.html">Resume of Mine </a></p>
-
-</body>
-</html>
+/*<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-56148525-1', 'auto');
+  ga('send', 'pageview');
+</script>*/
