ok once more and pnging

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<h1>Christopher Ngo</h1>
 		<h2>Engineer</h2>
 		<ul id="icons">
-			<li><a href="https://github.com/ingochris"><img src="http://imgur.com/50T6b1H.jpg" /></a></li>
-			<li><a href="https://www.linkedin.com/in/ingochris"><img src="http://imgur.com/50T6b1H.jpg" /></a></li>
-			<li><a href="mailto:ingochris+inquiries@gmail.com"><img src="http://imgur.com/hiR0p7z.jpg" /></a></li>
+			<li><a href="https://github.com/ingochris"><img src="http://i.imgur.com/Z7tu65Y.png" /></a></li>
+			<li><a href="https://www.linkedin.com/in/ingochris"><img src="http://imgur.com/50T6b1H.png" /></a></li>
+			<li><a href="mailto:ingochris+inquiries@gmail.com"><img src="http://imgur.com/hiR0p7z.png" /></a></li>
 			
 
 		</ul>
