--- a/Resume/Almada/resume.html
+++ b/Resume/Almada/resume.html
@@ -948,10 +948,10 @@
                                 <div markdown-viewer="" flex-height="5" class="font-secondary content-paragraph description ng-pristine ng-untouched ng-valid ng-isolate-scope" ng-model="employment.description" id="e-381-c" flex-height-font-size="14px" style="font-size: 14px;">
                                   <ul id="undefined-c">
                                     <li lines="1" id="undefined-c">Competed in hackathons throughout North America</li>
-                                    <li lines="1" id="undefined-c">Coordinator for Cal Hacks, HackingEDU, and SDHacks
+                                    <li lines="1" id="undefined-c">Held coordinator positions for Cal Hacks, HackingEDU, and SDHacks
                                       <br id="undefined-c">
                                     </li>
-                                    <li lines="2" id="undefined-c">Roles include Front-End Developer, Back-End Developer, Game Developer, Project Manager</li>
+                                    <li lines="2" id="undefined-c">Roles included Front-End Developer, Back-End Developer, Game Developer, Project Manager</li>
 
                                     <li lines="1" id="undefined-c">Several of my open source projects are listed on Page 2
                                       <br id="undefined-c">
