--- a/index.html
+++ b/index.html
@@ -14,4 +14,23 @@
 			<li><a href="https://www.linkedin.com/in/ingochris"><img src="http://imgur.com/50T6b1H.png" /></a></li>
 		</ul>
 	</div>
+
+  <hr>
+
+  <h2 id="bulk"></h2>
+  <div class="type-wrap" style="height: 50px;">
+    <span id="typed6" style="white-space:pre;"></span>
+  </div>
+
+  <pre>
+    <code class="javascript">
+  var typed6 = new Typed('#typed6', {
+    strings: ['npm install^1000\n `installing components...` ^1000\n `Fetching from source...`'],
+    typeSpeed: 40,
+    backSpeed: 0,
+    loop: true
+  });
+    </code>
+  </pre>
+
 </section>
