ADD: Software Development

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
     </section>
 
     <section class="p-0" id="Development">
+      <h2 class="section-heading text-center">Software Development</h2>
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
@@ -338,7 +339,7 @@
             <p>
             <a href="https://twitter.com/ingochristech" target="_blank">@ingochristech</a>
             </p>
-          </div>
+            </div>
         </div>
       </div>
     </section>
