ADD: Copyright Footer

--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
         </div>
       </div>
     </section>
+      <div class="text-center"><p>© 2018 ingochristech. All rights reserved. Unauthorized use prohibited.</p></div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
