ADD: "Software Development <hr class="my-4">"

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 
     <section class="p-0" id="Development">
       <h2 class="section-heading text-center">Software Development</h2>
+      <hr class="my-4">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
