ADD: Strong typed positions

--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
                 </ul>
               <h2 id="homeHeading">Positions</h2>                
                 <ul>
-                  <li>Board of Directors at <a href="https://siliconhacks.hackerearth.com">SiliconHacks</a></li>
-                  <li>Mentorship Director at <a href="https://hackingedu.co">HackingEDU</a></li>
-                  <li>Technical Director at <a href="http://sospectra.com">Spectra</a></li>
-                  <li>Senior NPI & Sustaining Test Engineer at <a href="https://qct.io">Quanta</a></li>
-                  <li>Security Research Scholar at <a href="https://scholar.stanford.edu">Stanford University</a></li>
-                  <li>Hardware Programming Ambassador at <a href="https://hackster.io">Hackster</a></li>
-                  <li>CS Intern at <a href="https://vmem.com">Violin Memory</a></li>
-                  <li>Moderator at <a href="https://reddit.com/r/bodyweightfitness">Reddit Bodyweight Fitness</a></li>
+                  <li><strong>Board of Directors</strong> at <a href="https://siliconhacks.hackerearth.com">SiliconHacks</a></li>
+                  <li><strong>Mentorship Director</strong> at <a href="https://hackingedu.co">HackingEDU</a></li>
+                  <li><strong>Technical Director</strong> at <a href="http://sospectra.com">Spectra</a></li>
+                  <li><strong>Senior NPI & Sustaining Test Engineer</strong> at <a href="https://qct.io">Quanta</a></li>
+                  <li><strong>Security Research Scholar</strong> at <a href="https://scholar.stanford.edu">Stanford University</a></li>
+                  <li><strong>Hardware Programming Ambassador</strong> at <a href="https://hackster.io">Hackster</a></li>
+                  <li><strong>CS Intern</strong> at <a href="https://vmem.com">Violin Memory</a></li>
+                  <li><strong>Moderator</strong> at <a href="https://reddit.com/r/bodyweightfitness">Reddit Bodyweight Fitness</a></li>
                 </ul>
                   <!--
                   <p>Winner of Stanford TreeCTF 2018</p>
