--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-rebel text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Red Team</h3>
               <p class="text-muted mb-0">Penetration testing and offensive security wargame activities</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-empire text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Blue Team</h3>
               <p class="text-muted mb-0">Ensure safety, verify security measures, and make certain of persistent effectiveness</p>
             </div>
@@ -171,7 +171,7 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Cryptography</h3>
               <p class="text-muted mb-0">Techniques for secure communication in the presence of adversaries</p>
             </div>
@@ -297,9 +297,11 @@
 
             <h2 class="section-heading text-white">Ancillary Athletics</h2>
 
-            <p>For Strength Training, my program is Reddit Bodyweight Fitness's RR. As part of the subreddit modteam, we administrate the subreddit and constantly improving our wiki knowledge base to advise and share best exercise, skillwork, and nutrition practices with our community (currently 681,535 members). I also practice Hatha Yoga, and dance the Latin Ballroom Styles of Bachata, Cha-cha, and Salsa (L.A. Style "On-1" and Cuban "Rueda de Casino").</p>
+            <p>For Strength Training, my program is Reddit Bodyweight Fitness's RR. As part of the subreddit modteam, we administrate the subreddit and constantly improving our wiki knowledge base to advise and share best exercise, skillwork, and nutrition practices with our community (currently 681,535 members).</p>
 
-            <p>I also trained several martial arts, including "hard-style" Tenshinkai International Aikido, American Vovinam, and Tae Kwon Do. My current style is in Karate, at Wado Ki Kai Karate-Do, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of Judo and JuJitsu from Japan. See my heritage tree here.</p>
+            <p>I also practice Hatha Yoga, and dance the Latin Ballroom Styles of Bachata, Cha-cha, and Salsa (L.A. Style "On-1" and Cuban "Rueda de Casino").</p>
+
+            <p>The Martial Arts I train include "hard-style" Tenshinkai International Aikido, American Vovinam, and Tae Kwon Do. My current style is in Karate, at Wado Ki Kai Karate-Do, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of Judo and JuJitsu from Japan. See my heritage tree here.</p>
 
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#Contact">Get Started!</a>
           </div>
