--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
             <p>I also practice Hatha Yoga, and dance the Latin Ballroom Styles of Bachata, Cha-cha, and Salsa (L.A. Style "On-1" and Cuban "Rueda de Casino").</p>
 
-            <p>The Martial Arts I train include "hard-style" Tenshinkai International Aikido, American Vovinam, and Tae Kwon Do. My current style is in Karate, at Wado Ki Kai Karate-Do, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of Judo and JuJitsu from Japan. See my heritage tree here.</p>
+            <p>The Martial Arts I train include "hard-style" Tenshinkai International Aikido, American Vovinam, and Tae Kwon Do. My current style is Wado Ki Kai Karate, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of Judo and JuJitsu from Japan. See my heritage tree here.</p>
 
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#Contact">Get Started!</a>
           </div>
