ADD: contact links and icons

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
             <p>The Martial Arts I train include "hard-style" Tenshinkai International Aikido, American Vovinam, and Tae Kwon Do. My current style is Wado Ki Kai Karate, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of Judo and JuJitsu from Japan.</p>
 
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="./img/wkklineage.png">WKK Lineage Tree!</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="./img/wkklineage.png">WKK Lineage <i class="fa fa-tree"></i></a>
           </div>
         </div>
       </div>
@@ -315,34 +315,59 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="my-4">
-            <p class="mb-5">Ready to start your next project with me? That's great! Send an email and I will get back to you as soon as possible!</p>
+            <p class="mb-5">Ready to start your next project with me? That's great! Simply send me an email and I will get back to you as soon as possible!</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-3 text-center">
-            <i class="fa fa-linkedin-square fa-3x sr-contact"></i>
+            <i class="fa fa-linkedin fa-3x sr-contact"></i>
             <p>
             <a href="https://linkedin.com/in/ingochris/" target="_blank">linkedin.com/in/ingochris</a>
             </p>
             </div>
             <div class="col-lg-3 text-center">
-            <i class="fa fa-envelope-square fa-3x sr-contact"></i>
+            <i class="fa fa-envelope fa-3x sr-contact"></i>
             <p>
             <a href="mailto:ingochris+inquiries@gmail.com">ingochris+inquiries@gmail.com</a>
             </p>
             </div>
             <div class="col-lg-3 text-center">
-            <i class="fa fa-github-square fa-3x sr-contact"></i>
+            <i class="fa fa-github fa-3x sr-contact"></i>
             <p>
             <a href="https://github.com/ingochris" target="_blank">github.com/ingochris</a>
             </p>
             </div>
             <div class="col-lg-3 text-center">
-            <i class="fa fa-twitter-square fa-3x sr-contact"></i>
+            <i class="fa fa-twitter fa-3x sr-contact"></i>
             <p>
-            <a href="https://twitter.com/ingochristech" target="_blank">@ingochristech</a>
+            <a href="https://twitter.com/ingochristech" target="_blank">twitter.com/ingochristech</a>
             </p>
             </div>
+            <div class="col-lg-3 text-center">
+            <i class="fa fa-instagram fa-3x sr-contact"></i>
+            <p>
+            <a href="https://instagram.com/ingochris" target="_blank">instagram.com/ingochris</a>
+            </p>
+            </div>
+            <div class="col-lg-3 text-center">
+            <i class="fa fa-free-code-camp fa-3x sr-contact"></i>
+            <p>
+            <a href="https://freecodecamp.com/ingochris" target="_blank">freecodecamp.com/ingochris</a>
+            </p>
+            </div>
+            <div class="col-lg-3 text-center">
+            <i class="fa fa-language fa-3x sr-contact"></i>
+            <p>
+            <a href="https://duome.eu/ingochris" target="_blank">duolingo.com/ingochris</a>
+            </p>
+            </div>
+            <div class="col-lg-3 text-center">
+            <i class="fa fa-reddit-alien fa-3x sr-contact"></i>
+            <p>
+            <a href="https://reddit.com/user/ingochris" target="_blank">reddit.com/u/ingochris</a>
+            </p>
+            </div>
+
         </div>
       </div>
     </section>
