--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
             <h2 class="section-heading text-white">Ancillary Athletics</h2>
 
-            <p>For Strength Training, my program is Reddit Bodyweight Fitness's RR. As part of the subreddit modteam, we administrate the subreddit and constantly improving our wiki knowledge base to advise and share best exercise, skillwork, and nutrition practices with our community (currently 681,535 members).</p>
+            <p>For Strength Training, my program is Reddit Bodyweight Fitness's RR. As part of the subreddit modteam, we administrate the subreddit and constantly improving our wiki knowledge base to advise and share best exercise, nutrition, and skillwork practices with our community (currently 681,535 members).</p>
 
             <p>I also practice Hatha Yoga, and dance the Latin Ballroom Styles of Bachata, Cha-cha, and Salsa (L.A. Style "On-1" and Cuban "Rueda de Casino").</p>
 
