ADD: Language Compatibility Chart

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>Christopher Ngo</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon"> </head>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -367,8 +368,14 @@
             <a href="https://reddit.com/user/ingochris" target="_blank">reddit.com/u/ingochris</a>
             </p>
             </div>
-
         </div>
+        <div class="text-center"><br><u>Human Language Compatibility Chart</u> <br>
+          Native: English+Việt.<br>
+2002: 日本語+Español+Français.<br>
+2016: 한국어+русский.<br>
+2017: Italiano+Română+Valyrian.<br>
+2018: 普通话+Deutsche+Português.</div>
+
       </div>
     </section>
       <div class="text-center"><p>© 2018 ingochristech. All rights reserved. Unauthorized use prohibited.</p></div>
