ADD: navbar cert

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
               <a class="nav-link js-scroll-trigger" href="#Development">Development</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#Certification">Certification</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Kinesiology">Kinesiology</a>
             </li>
             <li class="nav-item">
