ADD: metatags, ainomaly thumbnail

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Christopher Ngo @ingochris">
+    <meta name="description" content="Christopher Ngo (ingochris.tech) is a Cybersecurity Software Engineer/CTF & Hackathon Hacker/Pentester Consultant based in Silicon Valley (San Francisco Bay Area, California, USA). ">
+    <meta name="keywords" content="Christopher Ngo @ingochris">
+    <meta name="twitter:creator" content="@ingochristech">
+    <meta name="twitter:site" content="@ingochristech">
+    <meta property="og:description" content="Christopher Ngo ingochris.tech Personal Site">
+    <meta property="og:title" content="Christopher Ngo | ingochris.tech">
+    <meta property="og:url" content="https://www.ingochris.tech">
 
     <title>Christopher Ngo</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"> </head>
@@ -191,7 +197,7 @@
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/ainomaly.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
