--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Hi, I'm Christopher! 👋</strong>
+              <strong><br>Hi, I'm Christopher! 👋</strong>
             </h1>
             <hr>
             <div class="row">
