ADD: HH link in About Me

--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
                 <h2 id="homeHeading">About me</h2>
                 <p>I am a CCNA SECOPS certified engineer who entered the tech scene through the hair-raising vector of penetration testing.</p> 
                 
-                <p>I've become super involved in the hackathon hackers community with my free time, and have founded/directed several organizations. In the past few years, I've traveled the world to mentor hackers, compete at CTFs & Hackathons, and train in various disciplines of kinesiology.</p>
+                <p>I've become super involved in the <a href="https://facebook.com/groups/hackathonhackers
+">hackathon hackers</a> community with my free time, and have founded/directed several organizations. In the past few years, I've traveled the world to mentor hackers, compete at CTFs & Hackathons, and train in various disciplines of kinesiology.</p>
 
-                <p>I currently teach hacker workshops for <a href="https://makeschool.com/">Make School</a>.</p>
+                <p>I currently teach hacker workshops for <a href="https://makeschool.com">Make School</a>.</p>
 
                 <!--<p>My resume can be found <a href="https://github.com/ingochris/resume/raw/master/ChristopherNgo.pdf">here</a>.</p>-->
                 <h2 id="homeHeading">Honors</h2>
