ADD: Programming Langs

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h2 id="homeHeading">About me</h2>
                 <p>I am a CCNA SECOPS certified engineer who entered the tech scene through the hair-raising vector of penetration testing.</p> 
                 
-                <p>I've become super involved in the <a href="https://facebook.com/groups/hackathonhackers
+                <p>I've grown super involved in the <a href="https://facebook.com/groups/hackathonhackers
 ">hackathon hackers</a> community with my free time, and have founded/directed several organizations. In the past few years, I've traveled the world to mentor hackers, compete at CTFs & Hackathons, and train in various disciplines of kinesiology.</p>
 
                 <p>I currently teach hacker workshops for <a href="https://makeschool.com">Make School</a>.</p>
@@ -149,6 +149,7 @@
             <p>These are a few samples of my technical stacks:</p> 
               <p><strong>LINUX:</strong> AWK, BASH, CIFS/SMBFS, GIT, NFS, PXE, RAID, REGEX, ZSH
               </p><p><strong>NETWORK:</strong> Cisco IOS, Firebug, OSI Model, Routing, Switching, Subnetting, Wireshark
+              <p><strong>PROGRAMMING LANGUAGES:</strong> BASH, C, C++, C#, Java, JavaScript, PERL, PHP, Python, Ruby, SQL, Swift
               </p><p><strong>SECURITY:</strong> ACL, BURP, CAINE, EnCase, Fiddler, FTK, IDS/IPS, Kali, Metasploit, Nessus, Nexpose, Nmap, OWASP 10
               </p><p><strong>VIRTUAL:</strong> VirtualBox, VMware Player, vSphere ESXI, Workstation
               </p><p><strong>WEB:</strong> Flask, HTML/CSS, JavaScript, jQuery, LAMP Stack, MEAN Stack
