--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a class="nav-link js-scroll-trigger" href="#Development">Development</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Certification">Certification</a>
+              <a class="nav-link js-scroll-trigger" href="#Education">Education</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Kinesiology">Kinesiology</a>
@@ -288,7 +288,7 @@
           </div>
         </div>
       </div>
-      
+
       <h2 class="section-heading text-center">Software Development</h2>
       <hr class="my-4">
 
