--- a/index.html
+++ b/index.html
@@ -591,8 +591,10 @@
 
     </section>
 
-    <section class="bg-dark text-white">
+    <section class="bg-dark text-white" id="Education">
       <div class="container text-center">
+      <h2 class="section-heading text-center">Education</h2>
+      <hr class="my-4">
         <h2 class="mb-4">See more!</h2>
         <a class="btn btn-light btn-xl sr-button" href="https://devpost.com/ingochris">Devpost Portfolio</a>
       </div>
