UPDATE: Education rows and copyright

--- a/index.html
+++ b/index.html
@@ -592,11 +592,32 @@
     </section>
 
     <section class="bg-dark text-white" id="Education">
-      <div class="container text-center">
+      <div class="container col-lg-12 text-center">
       <h2 class="section-heading text-center">Education</h2>
       <hr class="my-4">
-        <h2 class="mb-4">See more!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="https://devpost.com/ingochris">Devpost Portfolio</a>
+            <div class="row">
+
+                    <div class="col-lg-4 text-center">
+                        <!-- 7 lines in a lg-4 col -->
+                        <p>42 University of Silicon Valley</p>
+                        <p class="text-faded">Computer Science</p>
+                    </div>
+
+                    <div class="col-lg-4 text-center">
+                        <!-- 8 lines in a lg-4 col -->
+                        <p>Rochester Institute of Technology (RITx)</p>
+                        <p class="text-faded">Cybersecurity</p>
+                    </div>
+
+                    <div class="col-lg-4 text-center">
+                        <!-- 9 lines in a lg-4 col -->
+                        <p>Mission College of Santa Clara</p>
+                        <p class="text-faded">Ethical Hacking</p>
+                    </div>
+                  </div>
+
+        <h2 class="mb-4">Select Coursework</h2>
+<!--        <a class="btn btn-light btn-xl sr-button" href="https://devpost.com/ingochris">Devpost Portfolio</a>-->
       </div>
     </section>
 
@@ -691,7 +712,7 @@
 
       </div>
     </section>
-      <div class="text-center"><p>© 2018 ingochristech. All rights reserved. Unauthorized use prohibited.</p></div>
+      <div class="text-center"><p>© 2018 By Christopher Ngo. All rights reserved. Unauthorized use prohibited.</p></div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
