FIX: Cleanup Human Lang Chart

--- a/index.html
+++ b/index.html
@@ -705,11 +705,11 @@
         </div>
         <div class="text-center"><br><u>Human Language Compatibility Chart</u> <br>
           Native: English+Việt.<br>
-2002: 日本語+Español+Français.<br>
-2016: 한국어+русский.<br>
-2017: Italiano+Română+Valyrian.<br>
-2018: 普通话+Deutsche+Português.</div>
-
+          2002: 日本語+Español+Français.<br>
+          2016: 한국어+русский.<br>
+          2017: Italiano+Română+Valyrian.<br>
+          2018: 普通话+Deutsche+Português.
+        </div>
       </div>
     </section>
       <div class="text-center"><p>© 2018 By Christopher Ngo. All rights reserved. Unauthorized use prohibited.</p></div>
